crates/fai-ide/tests/snapshots/queries__definition_at_Red.snap
---
source: crates/fai-ide/tests/queries.rs
expression: json(&r)
---
{
  "schemaVersion": 1,
  "definitions": [
    {
      "span": {
        "file": "P.fai",
        "start": {
          "line": 4,
          "column": 5
        },
        "end": {
          "line": 4,
          "column": 8
        },
        "byteStart": 27,
        "byteEnd": 30
      }
    }
  ]
}
