crates/fai-ide/tests/snapshots/queries__refs_A_inc.snap
---
source: crates/fai-ide/tests/queries.rs
expression: json(&r)
---
{
  "schemaVersion": 1,
  "target": {
    "path": "A.inc",
    "name": "inc",
    "kind": "function",
    "module": "A",
    "visibility": "public",
    "signature": "Int -> Int",
    "span": {
      "file": "A.fai",
      "start": {
        "line": 4,
        "column": 1
      },
      "end": {
        "line": 4,
        "column": 18
      },
      "byteStart": 34,
      "byteEnd": 51
    }
  },
  "references": [
    {
      "span": {
        "file": "B.fai",
        "start": {
          "line": 4,
          "column": 11
        },
        "end": {
          "line": 4,
          "column": 16
        },
        "byteStart": 37,
        "byteEnd": 42
      }
    },
    {
      "span": {
        "file": "B.fai",
        "start": {
          "line": 6,
          "column": 12
        },
        "end": {
          "line": 6,
          "column": 17
        },
        "byteStart": 57,
        "byteEnd": 62
      }
    },
    {
      "span": {
        "file": "B.fai",
        "start": {
          "line": 6,
          "column": 19
        },
        "end": {
          "line": 6,
          "column": 24
        },
        "byteStart": 64,
        "byteEnd": 69
      }
    }
  ],
  "truncated": false
}
