crates/fai-ide/tests/snapshots/queries__symbols.snap
---
source: crates/fai-ide/tests/queries.rs
expression: json(&r)
---
{
  "schemaVersion": 1,
  "symbols": [
    {
      "path": "A.inc",
      "name": "inc",
      "kind": "function",
      "module": "A",
      "visibility": "public",
      "signature": "Int -> Int",
      "span": {
        "file": "A.fai",
        "start": {
          "line": 4,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 18
        },
        "byteStart": 34,
        "byteEnd": 51
      }
    },
    {
      "path": "A.twice",
      "name": "twice",
      "kind": "function",
      "module": "A",
      "visibility": "public",
      "signature": "('a -> 'a) -> 'a -> 'a",
      "span": {
        "file": "A.fai",
        "start": {
          "line": 7,
          "column": 1
        },
        "end": {
          "line": 7,
          "column": 21
        },
        "byteStart": 91,
        "byteEnd": 111
      }
    },
    {
      "path": "B.four",
      "name": "four",
      "kind": "value",
      "module": "B",
      "visibility": "private",
      "signature": "Int",
      "span": {
        "file": "B.fai",
        "start": {
          "line": 6,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 29
        },
        "byteStart": 46,
        "byteEnd": 74
      }
    },
    {
      "path": "B.two",
      "name": "two",
      "kind": "value",
      "module": "B",
      "visibility": "public",
      "signature": "Int",
      "span": {
        "file": "B.fai",
        "start": {
          "line": 4,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 18
        },
        "byteStart": 27,
        "byteEnd": 44
      }
    }
  ],
  "truncated": false
}
